--- a/index.html
+++ b/index.html
@@ -201,7 +201,13 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+	    <a class="coinbase-button" 
+	       data-code="439f075116a3689ecf8c24e80855d7f0" 
+	       data-button-text="Support with Bitcoins"
+	       data-button-style="custom_large" 
+	       href="https://coinbase.com/checkouts/439f075116a3689ecf8c24e80855d7f0">Support with Bitcoins</a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+            <!--button class="btn btn-success btn-large">Preorder</button-->
           </div>
           <div class="span8 offset2 social">
 	    <!-- AddThis Button BEGIN -->
